kubernetes/infrastructure/production/networking/pihole/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-dashboard
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "2"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "pihole.${SECRET_DOMAIN}"
      secretName: "pihole-dashboard-tls"
  rules:
    - host: "pihole.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /admin/
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 80
