kubernetes/infrastructure/production/networking/pihole/dashboard/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-dashboard-catchall
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pihole.${SECRET_DOMAIN}`)
      priority: 1
      middlewares:
        - name: pihole-redirect-regex
          namespace: networking
      services:
        - kind: Service
          name: pihole-web
          namespace: networking
          port: 80
  tls:
    secretName: pihole-dashboard-tls
